--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,7 @@
 field.required={0} is required
-found.empty={0} not found
+field.found.empty={0} not found
+field.already.taken={0} already taken
 field.min.length=Minimum {0} length {1} characters
 field.max.length=Maximum {0} length {1} characters
 field.incorrect=The {0} is incorrect
+field.incorrect.spaces={0} must not contain spaces
