add Change Password

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,3 +5,4 @@ field.min.length=Minimum {0} length {1} characters
 field.max.length=Maximum {0} length {1} characters
 field.incorrect=The {0} is incorrect
 field.incorrect.spaces={0} must not contain spaces
+field.match=Please make sure your {0} match
