--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,8 +1,8 @@
-field.required={0} is required
-field.found.empty={0} not found
-field.already.taken={0} already taken
-field.min.length=Minimum {0} length {1} characters
-field.max.length=Maximum {0} length {1} characters
-field.incorrect=The {0} is incorrect
-field.incorrect.spaces={0} must not contain spaces
-field.match=Please make sure your {0} match
+field.required=Is required
+field.found.empty=Not found
+field.already.taken=Already taken
+field.min.length=Minimum length {0} characters
+field.max.length=Maximum length {0} characters
+field.incorrect=Is incorrect
+field.incorrect.spaces=Must not contain spaces
+field.match=Please make sure your match
