Book add put method

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -1,8 +1,11 @@
 field.required=Заполнение обязательно
 field.found.empty=Не найдено
 field.already.taken=Уже есть
+field.length=Длинна должна содержать {0} символов
 field.min.length=Минимальная длинна {0} символов
 field.max.length=Максимальная длинна {0} символов
 field.incorrect=Не корректно
 field.incorrect.spaces=Не должно содержаться пробелов
 field.match=Убедитесь, в совпадении
+field.too.mach=Слишком много
+field.too.few=Слишком мало
