--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,8 +1,11 @@
 field.required=Is required
 field.found.empty=Not found
 field.already.taken=Already taken
+field.length=Length must have {0} characters
 field.min.length=Minimum length {0} characters
 field.max.length=Maximum length {0} characters
 field.incorrect=Is incorrect
 field.incorrect.spaces=Must not contain spaces
 field.match=Please make sure your match
+field.too.mach=Too much
+field.too.few=Too few
