--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,3 +9,4 @@ field.incorrect.spaces=Must not contain spaces
 field.match=Please make sure your match
 field.too.mach=Too much
 field.too.few=Too few
+message.delete={0} delete successful
