--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -9,3 +9,4 @@ field.incorrect.spaces=Не должно содержаться пробелов
 field.match=Убедитесь, в совпадении
 field.too.mach=Слишком много
 field.too.few=Слишком мало
+message.delete={0} удален успешно
